// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TBuildingsBase
message TBuildingsBase
{	
	
	
	repeated TBuildingsDefine TBuildings = 1; // TBuildings

}

// Defined in table: TBuildings
message TBuildingsDefine
{	
	
	
	optional uint32 Id = 1; // 楼ID
	
	
	optional uint32 Province = 2; // 省
	
	
	optional uint32 City = 3; // 城市
	
	
	optional uint32 Community = 4; // 社区
	
	
	optional uint32 Number = 5; // 楼号
	
	
	optional uint32 MaxFloor = 6; // 最大楼层数
	
	
	optional uint32 NumPerFloor = 7; // 每层多少户最多4户
	
	
	optional string Houses1 = 8; // 户型1
	
	
	optional string Houses2 = 9; // 户型2
	
	
	optional string Houses3 = 10; // 户型3
	
	
	optional string Houses4 = 11; // 户型4
	
	
	optional float PosX = 12; // 坐标x
	
	
	optional float PosY = 13; // 坐标y
	
	
	optional string Des = 14; // 描述

}

